# pdf-tools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yaml
k8s/: certificate.yaml  clusterissuer-letsencrypt-prod.yaml  deployment.yaml  ingress.yaml  ingressroute.yaml  service.yaml  traefik.yaml
src/: app.rs  config.rs  constants.rs  error.rs  main.rs  pages.rs  pdf.rs  session.rs  shutdown.rs  state.rs  util.rs
src/handlers/: api.rs  auth.rs  health.rs  mod.rs  root.rs
static/: app.js  robots.txt  sitemap.xml  styles.css
templates/: index.html
